# Ecommerce-Product-Assistant

./: .env.copy  pyproject.toml  requirements.txt  scraper_ui.py
Product_Assistant/: __init__.py
Product_Assistant/etl/: __init__.py  data_ingestion.py
Product_Assistant/exception/: __init__.py
Product_Assistant/logger/: __init__.py  custom_logger.py
Product_Assistant/prompt_library/: __init__.py
Product_Assistant/utils/: __init__.py  model_loader.py
config/: __init__.py
data/: product_reviews.csv
notebook/: experiments.ipynb
templates/: index.html
tests/: __init__.py
